# SimpleDnnLayers

./: .sconsign.dblite  CMakeLists.txt  README.md  SConstruct  buildConfig.py  buildDebug.sh  clean.sh  externalLibs.py  readme.md  simple_mlp_cpp.sln
LayerTest/: BatchNormalizationTest.cpp  CMakeLists.txt  LayerTest.vcxproj  LayerTest.vcxproj.filters  SConscript  TestUtils.hpp  activationTest.cpp  affineTest.cpp  convolutionTest.cpp  layerTestDebug  poolTest.cpp  poolingTest.cpp  testOp.cpp
Layers/: ActivationLayers.h  ActivationLayers.hpp  AffineLayer.hpp  BasicOperations.cpp  BasicOperations.h  BasicOperations.hpp  BatchNormalizationLayer.hpp  CMakeLists.txt  ConvolutionLayer.hpp  Layers.vcxproj  Layers.vcxproj.filters  Non_Opt_Activations.hpp  Non_Opt_Activations_C_impl.c  Non_Opt_Activations_C_impl.h  Non_Opt_Affine_C.c  Non_Opt_Affine_C.h  Non_Opt_Affine_C.os  Non_Opt_BatchNormalization_C.c  Non_Opt_BatchNormalization_C.h  Non_Opt_Convolution_C.c  Non_Opt_Convolution_C.h  Non_Opt_Pooling_C.c  Non_Opt_Pooling_C.h  Non_Opt_Pools_C_impl.h  OpInterfaces.h  OpInterfaces.hpp  PoolLayers.hpp  PoolingLayer.hpp  SConscript  gemm.c  gemm.h  matrixSupport.c  matrixSupport.h  matrixSupport.os  testOp.cpp
UnitTest/: UnitTest.vcxproj  UnitTest.vcxproj.filters
simple_mlp_cpp/: MlpNet.cpp  MlpNet.h  RLEigenUtils.cpp  RLEigenUtils.h  SConscript  SupportFunctions.cpp  SupportFunctions.h  TimeStamp.cpp  TimeStamp.hpp  TrainMlp.cpp  TrainMlp.h  load_mnist.cpp  load_mnist.h  mlpConfig.json  simple_mlp_cpp.vcxproj  simple_mlp_cpp.vcxproj.filters  testRLDNN.cpp  testRLDNN.h  (+1 more)
(+3 files in other folders)
